--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,12 +7,13 @@
 		
 		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   	<script src="./bower_components/socket.io-client/socket.io.js"></script>
-  	<script>
+  	<!-- <script>
   		var socket = io();
 
   		socket.on('messages', function(message) {
   			$('body').text(message.data);
   		});
-  	</script>
+  	</script> -->
+  	<script src="app.js"></script>
 	</body>
 </html>
