--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,19 +1,206 @@
+<!--  
+
+Index file for Connect Four Multiplayer
+Written by Sam Reaves
+April 4th, 2016
+
+ -->
+
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+		<!-- Include the Montserrat and Roboto Slab fonts hosted from google.com/fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab:400,700' rel='stylesheet' type='text/css'/>    
 		<title>Connect Four</title>
 	</head>
 	<body>
 		
+        <!-- One big box for the game -->
+        <div id="game">
+
+            <!-- That space where you see player 1? I want a header there. I'll use it to say which player's turn it is. -->
+            <header id="header">
+
+                <!-- Player 1 will always go first, so go ahead and put Player 1 there. -->
+                <h1>Player 1</h1>
+            </header>
+
+            <!-- Below the header, I want to occasionally send the player a message. Right now, they need to know how to drop their first token. -->
+            <div id="messages">
+                Tap your token to make your play.
+            </div>
+
+            <!-- Here I have a space called drop_space where the tokens will reside until they fall. -->
+            <div id="drop_space">
+                <div class="token player1 currenttoken"></div>
+            </div>
+
+            <!-- Here's our big ol' gameboard -->
+            <div id="game_board">
+
+                <!-- I gave each column and space a class and an identifier so that it would be easier to see inside the element inspector. -->
+                <div class="col" id="col1">
+                    <div id="00" class="space">
+
+                    </div>
+                    <div id="01" class="space">
+
+                    </div>
+                    <div id="02" class="space">
+
+                    </div>
+                    <div id="03" class="space">
+
+                    </div>
+                    <div id="04" class="space">
+
+                    </div>
+                    <div id="05" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col2">
+                    <div id="10" class="space">
+
+                    </div>
+                    <div id="11" class="space">
+
+                    </div>
+                    <div id="12" class="space">
+
+                    </div>
+                    <div id="13" class="space">
+
+                    </div>
+                    <div id="14" class="space">
+
+                    </div>
+                    <div id="15" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col3">
+                    <div id="20" class="space">
+
+                    </div>
+                    <div id="21" class="space">
+
+                    </div>
+                    <div id="22" class="space">
+
+                    </div>
+                    <div id="23" class="space">
+
+                    </div>
+                    <div id="24" class="space">
+
+                    </div>
+                    <div id="25" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col4">
+                    <div id="30" class="space">
+
+                    </div>
+                    <div id="31" class="space">
+
+                    </div>
+                    <div id="32" class="space">
+
+                    </div>
+                    <div id="33" class="space">
+
+                    </div>
+                    <div id="34" class="space">
+
+                    </div>
+                    <div id="35" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col5">
+                    <div id="40" class="space">
+
+                    </div>
+                    <div id="41" class="space">
+
+                    </div>
+                    <div id="42" class="space">
+
+                    </div>
+                    <div id="43" class="space">
+
+                    </div>
+                    <div id="44" class="space">
+
+                    </div>
+                    <div id="45" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col6">
+                    <div id="50" class="space">
+
+                    </div>
+                    <div id="51" class="space">
+
+                    </div>
+                    <div id="52" class="space">
+
+                    </div>
+                    <div id="53" class="space">
+
+                    </div>
+                    <div id="54" class="space">
+
+                    </div>
+                    <div id="55" class="space">
+
+                    </div>
+                </div>
+                <div class="col" id="col7">
+                    <div id="60" class="space">
+
+                    </div>
+                    <div id="61" class="space">
+
+                    </div>
+                    <div id="62" class="space">
+
+                    </div>
+                    <div id="63" class="space">
+
+                    </div>
+                    <div id="64" class="space">
+
+                    </div>
+                    <div id="65" class="space">
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- Just for fun, I allowed the user to change the background in case they didn't like the iPhone 5C green -->
+            <div id="change_background">
+                <span>Change the background</span>
+
+                <!-- I use Javascript to listen for clicks on each of these divs, and if there is one, I change the background color. -->
+                <div id="background_change_white" class="background_change_color"></div>
+                <div id="background_change_black" class="background_change_color"></div>
+                <div id="background_change_green" class="background_change_color"></div>
+            </div>
+        </div>
 		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   	<script src="./bower_components/socket.io-client/socket.io.js"></script>
-  	<!-- <script>
-  		var socket = io();
 
-  		socket.on('messages', function(message) {
-  			$('body').text(message.data);
-  		});
-  	</script> -->
+  	<!-- Include my connectfour javascript logic into this file -->
+    <script type="text/javascript" src="connectfour.js"></script>
   	<script src="app.js"></script>
 	</body>
 </html>
